--- a/NEWGAME/NEWGAME.vcxproj.filters
+++ b/NEWGAME/NEWGAME.vcxproj.filters
@@ -782,7 +782,7 @@
     <ClInclude Include="Common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Titlte.h">
+    <ClInclude Include="Title.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
