--- a/NEWGAME/NEWGAME.vcxproj
+++ b/NEWGAME/NEWGAME.vcxproj
@@ -114,6 +114,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Game2.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Select.cpp" />
     <ClCompile Include="stdafx.cpp" />
@@ -319,6 +320,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Select.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Game2.h" />
     <ClInclude Include="Title.h" />
   </ItemGroup>
   <ItemGroup>
