--- a/NEWGAME/NEWGAME.vcxproj.filters
+++ b/NEWGAME/NEWGAME.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClCompile Include="Title.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Game2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\icon.ico">
@@ -801,6 +804,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="entity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
