--- a/NEWGAME/NEWGAME.vcxproj
+++ b/NEWGAME/NEWGAME.vcxproj
@@ -113,10 +113,11 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="Game2.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Select.cpp" />
+    <ClCompile Include="Shot.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Title.cpp" />
   </ItemGroup>
@@ -315,12 +316,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h" />
-    <ClInclude Include="enemy.h" />
-    <ClInclude Include="entity.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Select.h" />
+    <ClInclude Include="Shot.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="Game2.h" />
     <ClInclude Include="Title.h" />
   </ItemGroup>
   <ItemGroup>
