--- a/NEWGAME/NEWGAME.vcxproj
+++ b/NEWGAME/NEWGAME.vcxproj
@@ -118,6 +118,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Select.cpp" />
     <ClCompile Include="Shot.cpp" />
+    <ClCompile Include="Shot2.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Title.cpp" />
   </ItemGroup>
@@ -321,6 +322,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Select.h" />
     <ClInclude Include="Shot.h" />
+    <ClInclude Include="Shot2.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Title.h" />
   </ItemGroup>
